src/test/deca/syntax/invalid/intermediaire2/elseif/01noespace.deca
// Description:
//    tests de programme incorrect lexicalement : 
//    il manque un espace entre le else et le if
//
// Resultats:
//    01noespace.deca:14:4:    
//
// Historique:
//    cree le 08/06/2022

{
    if (2 < 1) {
    }
    elseif (2 > 1) {
    }
}